# Robota.ua-parser

./: .env.example  README.md  pyproject.toml
src/: __main__.py  utils.py
